# voxa-server

./: .gitignore  Cargo.toml  README.md  client.js
cli/: Cargo.toml
cli/src/: main.rs
src/: auth.rs  client.rs  database.rs  lib.rs  loader.rs  logger.rs  macros.rs  main.rs  plugin.rs  types.rs  vfs.rs
src/requests/: message.rs  mod.rs
src/utils/: client.rs  database.rs  loader.rs  logger.rs  mod.rs  plugin.rs  vfs.rs
test-plugin/: .gitignore  Cargo.toml
test-plugin/src/: lib.rs  main.rs
