[package]
name = "voxa-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
wasmtime = { version = "36.0.2", optional = true }
wasmtime-wasi = { version = "36.0.2", features = ["preview1"], optional = true }

[features]
default = ["loader"]
loader = ["wasmtime", "wasmtime-wasi"]
