[package]
name = "voxa-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
libloading = { version = "0.8.8", optional = true }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
tungstenite = "0.27.0"

[features]
default = ["loader"]
loader = ["libloading"]
