[package]
name = "voxa-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = "0.4.42"
libloading = { version = "0.8.8", optional = true }
once_cell = "1.21.3"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
sha1 = "0.10.6"
tungstenite = "0.27.0"

[features]
default = []
loader = ["libloading"]
